# nva-sync

./: .copier-answers.yml  .env.example  .gitignore  README.md  main.py  pyproject.toml  repliacte_pbase_cristin.yaml  sync_data.py
src/datasync/: dms.py  main.py  nva.py  pit_registering_salmon.py  settings.py  sync_data.py  sync_nva_cristin.py  ubw.py
src/datasync/libs/: helpers.py
