
[project]
authors = [
  {name = "ninanor", email = "niccolo.cantu@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "click>=8.3.0",
  "django-environ",
  "dlt>=1.17.1",
  "duckdb>=1.4.1",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "structlog>=25.5.0",
]
description = ""
license = "GPL-3.0+"
name = "nva_sync"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
nva_sync = "main:start"

[dependency-groups]
dev = [
  "deptry",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
