[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["deptry"]

[project]
authors = [{name = "ninanor", email = "niccolo.cantu@nina.no"}]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ",
  "dlt[duckdb,filesystem,parquet,s3]>=1.17.1",
  "numpy>=2.2.6",
  "structlog>=25.5.0",
  "typer>=0.20.0"
]
description = ""
license = "GPL-3.0+"
name = "datasync"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
datasync = "datasync.main:app"
nva_sync = "datasync.nva:app"
ubw_sync = "datasync.ubw:app"

[tool.deptry.per_rule_ignores]
DEP002 = ["rich", "numpy"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
